my-eks-cluster/kubernetes/workloads/gateway-api/my-alb-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-alb-gateway
  namespace: default
spec:
  gatewayClassName: alb-gatewayclass
  infrastructure: # 
    parametersRef:
      kind: LoadBalancerConfiguration
      name: lb-config-alb
      group: gateway.k8s.aws
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
